# Discard-Python-Local-Chat

./: Discard.py  LICENSE.md  README.md  cmdCommands.py  config.py  discardy.py  network_base.py  printer.py  pyproject.toml  sv_greetings.txt
Discardy/: cmdCommands.py  config.py  discardy.py
src/: discard.py
src/discard/: __init__.py  __main__.py  cli.py  cmdCommands.py  commands.py  config.py  discardy.py  network.py  network_base.py  printer.py
